# Digital-Security-Ops-Mastery

./: .readthedocs.yaml  README.md  README_de.md  README_en.md  mkdocs.yml  pyproject.toml
backup-restore/: backup-restore-phone.md
child-proof-phone/: README.md  README_de.md  README_en.md
child-proof-phone/online-games-hosts-blocklist/: hosts
de-ggogled-phone/: README.md
de-googled-phone/: README.md  README_de.md  README_en.md
docs/: index.md  index_en.md
docs/backup-restore-phone/: README.md
docs/child-proof-phone/: README.md  README_en.md
docs/child-proof-phone/online-games-hosts-blocklist/: hosts
docs/css/: custom.css
docs/de-googled-phone/: README.md  README_en.md
docs/nextcloud/: README.md  README_en.md
docs/ubuntu-linux-automations/: README.md  README_compress_images.md  README_mount_nas.md  README_postprocess_video.md  README_setup_kubuntu.md  README_setup_printer_scans_dir.md  README_sync_dir.md
docs/ubuntu-linux-automations/scripts/: ENCRYPT.desktop  ENCRYPT.sh  (+4 more)
nextcloud/: README.md  README_de.md  README_en.md
ubuntu-linux-automations/: README.md  README_compress_images.md  README_compress_videos.md  README_mount_nas.md  README_setup_kde_language.md  README_setup_kubuntu.md  README_setup_printer_scans_dir.md  README_sync_dir.md  setup_kubuntu.sh  sync_docs_unison.sh
ubuntu-linux-automations/scripts/: compress_images.desktop  compress_images.sh  compress_videos.desktop  compress_videos.sh  mount_nas.sh  postprocess_video.desktop  set_kde_language.sh  setup_kubuntu.sh  setup_shared_folder_samba.sh  sync_dir.sh  sync_docs_unison.sh
