[project]
name = "Digital-Security-Ops-Mastery"
dynamic = ["version"]
description = "A modern hands-on guide for building secure, privacy-first PC and smartphone setups – from Linux automation and child-safe devices to Google-free digital independence."
authors = [
    {name = "pamagister"}
]
readme = "README_en.md"

# Dev dependencies as optional dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=2.6.1",
    "pygments>=2.19.1",
]